fix:fixed letter spacing in contact-us section for windows

--- a/style.css
+++ b/style.css
@@ -580,7 +580,7 @@ nav li:first-child::before {
   overflow: hidden;
   -moz-overflow: hidden;
   margin-top: 27px;
-  letter-spacing: 0px;
+  letter-spacing: -0.4px;
   text-align: justify;
 }
 
